--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/trigger-create/trigger-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/trigger-create/trigger-create.component.html
@@ -1,4 +1,4 @@
-<nb-card id="modal-wrapper">
+<nb-card>
   <nb-card-header class="d-flex justify-content-between align-items-start gap-1">
     Create a new event
     <button
