--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
@@ -18,6 +18,6 @@
   class="pointer ml-2 min-width-1em"
   icon="minus-circle-outline"
   nbTooltip="Remove this transition"
-  (click)="remove(transition)"
+  (click)="remove()"
   style="margin-right: -5px"
 ></nb-icon>
