--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -192,7 +192,7 @@
                 [style.background]="getContextEntityColor(context)"
                 [style.color]="getContextEntityContrast(context)"
               >
-                {{ qualifiedName(state.user, context.entityType, context.entityRole) }}
+                {{ qualifiedName(stateService.user, context.entityType, context.entityRole) }}
               </span>
             </ng-container>
 
