--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group-add/state-group-add.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group-add/state-group-add.component.html
@@ -1,4 +1,4 @@
-<nb-card id="modal-wrapper">
+<nb-card>
   <nb-card-header class="d-flex justify-content-between align-items-center gap-1">
     Create a new group
     <button
