--- a/bot/admin/web/src/app/faq/faq-management/faq-management-edit/faq-management-edit.component.scss
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management-edit/faq-management-edit.component.scss
@@ -1,6 +1,6 @@
-@import '~@nebular/theme/styles/global/breakpoints';
-@import '~@nebular/theme/styles/theming';
-@import '~@nebular/theme/styles/themes';
+@import '@nebular/theme/styles/global/breakpoints';
+@import '@nebular/theme/styles/theming';
+@import '@nebular/theme/styles/themes';
 
 .grid-button {
   display: grid;
