--- a/bot/admin/web/src/app/faq/faq-management/faq-management.component.scss
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management.component.scss
@@ -1,4 +1,4 @@
-@import '~@nebular/theme/styles/global/breakpoints';
+@import '@nebular/theme/styles/global/breakpoints';
 
 .aside {
   height: fit-content;
