--- a/bot/admin/web/src/app/faq/faq-training/faq-training.component.scss
+++ b/bot/admin/web/src/app/faq/faq-training/faq-training.component.scss
@@ -1,4 +1,4 @@
-@import '~@nebular/theme/styles/global/breakpoints';
+@import '@nebular/theme/styles/global/breakpoints';
 
 .loading {
   min-height: 50px;
