--- a/bot/admin/web/src/styles.css
+++ b/bot/admin/web/src/styles.css
@@ -17,7 +17,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~material-design-icons-iconfont/dist/material-design-icons.css';
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 /* Workaround: icon displayed twice */
 nb-icon.material-icons:before {
