--- a/nlp/admin/web/src/app/theme/styles/styles.scss
+++ b/nlp/admin/web/src/app/theme/styles/styles.scss
@@ -20,12 +20,15 @@
 @import 'themes';
 
 // framework component themes (styles tied to theme variables)
-@import '~@nebular/theme/styles/globals';
+@import '@nebular/theme/styles/globals';
 
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/mixins';
-@import '~bootstrap/scss/grid';
+@import 'bootstrap/scss/functions';
+@import 'bootstrap/scss/variables';
+@import 'bootstrap/scss/maps';
+@import 'bootstrap/scss/mixins';
+@import 'bootstrap/scss/grid';
+
+@import 'bootstrap/scss/pagination';
 
 @import './layout';
 @import './overrides';
