🚨(app): replace tslint by eslint and fix linter / compiler errors

--- a/bot/admin/web/src/app/analytics/users/users.component.html
+++ b/bot/admin/web/src/app/analytics/users/users.component.html
@@ -47,7 +47,7 @@
               class="chat-item"
             >
               <nb-card
-                accent="{{ user.playerId == selectedUser?.playerId ? 'info' : '' }}"
+                accent="{{ user.playerId === selectedUser?.playerId ? 'info' : '' }}"
                 class="chat-card"
               >
                 <nb-card-header (click)="loadDialog(user)">
