--- a/bot/admin/web/src/app/bot/story/search-story.component.html
+++ b/bot/admin/web/src/app/bot/story/search-story.component.html
@@ -335,6 +335,6 @@
     (delete)="delete($event)"
     [fullDisplay]="true"
     [displaySteps]="true"
-    (close)="keepExpandableStateAndSearch()"
+    (closeStory)="keepExpandableStateAndSearch()"
   ></tock-story>
 </mat-accordion>
