--- a/bot/admin/web/src/app/test/plan/test-plan.component.html
+++ b/bot/admin/web/src/app/test/plan/test-plan.component.html
@@ -138,7 +138,7 @@
             >
               <mat-icon>launch</mat-icon>
             </button>
-            <div *ngIf="executePlan && p == this.runningTestPlan">
+            <div *ngIf="executePlan && p === this.runningTestPlan">
               <br />
               <img
                 src="{{ baseHref }}assets/images/loading.gif"
