--- a/nlp/admin/web/src/app/applications/application-advanced-options/application-advanced-options.component.html
+++ b/nlp/admin/web/src/app/applications/application-advanced-options/application-advanced-options.component.html
@@ -80,7 +80,7 @@
               nbButton
               outline
               status="primary"
-              size="xsmall"
+              size="small"
               (click)="exportAlexa = false"
             >
               Cancel
@@ -88,7 +88,7 @@
             <button
               nbButton
               status="primary"
-              size="xsmall"
+              size="small"
               style="margin-left: 10px"
               (click)="downloadAlexaExport()"
             >
