--- a/bot/admin/web/src/app/analytics/flow/flow.component.html
+++ b/bot/admin/web/src/app/analytics/flow/flow.component.html
@@ -64,11 +64,11 @@
           nbTooltip="Show effective user trafic (dynamic mode)"
           >User flow on</span
         >
-        <date-range-calendar
+        <tock-date-range-calendar
           [disabled]="!statsMode"
           [rangeInDays]="7"
           (datesChanged)="datesChanged($event)"
-        ></date-range-calendar>
+        ></tock-date-range-calendar>
       </div>
 
       <br />
@@ -196,7 +196,7 @@
                   icon="code"
                 ></nb-icon>
                 <nb-icon
-                  *ngIf="selectedStory.storyType == undefined"
+                  *ngIf="selectedStory.storyType === undefined"
                   class="story-type"
                   icon="question-mark-circle-outline"
                 ></nb-icon>
@@ -228,7 +228,7 @@
                 icon="code"
               ></nb-icon>
               <nb-icon
-                *ngIf="entry.value.storyType == undefined"
+                *ngIf="entry.value.storyType === undefined"
                 class="story-type"
                 nbTooltip="Unknown Type"
                 icon="question-mark-circle-outline"
@@ -419,7 +419,7 @@
   </nb-accordion-item>
 </nb-accordion>
 
-<div *ngIf="selectedLayout != 'Sankey'">
+<div *ngIf="selectedLayout !== 'Sankey'">
   <div
     *ngIf="graphData"
     class="cytoscape"
@@ -467,11 +467,11 @@
     </button>
   </div>
 </div>
-<div *ngIf="selectedLayout == 'Sankey'">
+<div *ngIf="selectedLayout === 'Sankey'">
   <nb-card>
     <nb-card-body>
       <google-chart
-        *ngIf="flowData != null"
+        *ngIf="flowData !== null"
         type="Sankey"
         [data]="flowData.data"
         [columns]="flowData.columnNames"
