--- a/nlp/admin/web/src/app/core-nlp/auth/login/login.component.html
+++ b/nlp/admin/web/src/app/core-nlp/auth/login/login.component.html
@@ -22,7 +22,6 @@
   <div class="col-md-3"></div>
   <div class="col-md-6">
     <nb-card>
-      <nb-card-header></nb-card-header>
       <nb-card-body>
         <div style="text-align: center">
           <img
@@ -103,6 +102,8 @@
               <div class="row">
                 <div style="text-align: center; margin: auto">
                   <button
+                    nbButton
+                    status="primary"
                     type="submit"
                     class="btn btn-outline-primary"
                   >
