resolves #1440 [PL] add user satisfaction module

--- a/bot/admin/web/src/app/analytics/satisfaction/activate-satisfaction/activate-satisfaction.component.html
+++ b/bot/admin/web/src/app/analytics/satisfaction/activate-satisfaction/activate-satisfaction.component.html
@@ -1,5 +1,5 @@
 <form class="example-form" [formGroup]="formGroup" (ngSubmit)="alertFormValues(formGroup)" class="activate-satisfaction">
-  <mat-slide-toggle formControlName="enableSatisfaction">J'active le module satisfaction client</mat-slide-toggle>
-  <button mat-raised-button type="submit">Sauvegarder</button>
+  <mat-slide-toggle formControlName="enableSatisfaction">I activate the users satisfaction module</mat-slide-toggle>
+  <button mat-raised-button type="submit">Save</button>
 </form>
 
