fixes #1450 [Tock Studio] loading stories too slow if more than 1000 stories

--- a/bot/admin/web/src/app/bot/story/search-story.component.html
+++ b/bot/admin/web/src/app/bot/story/search-story.component.html
@@ -213,7 +213,7 @@
           nbTreeGridCell
           *nbTreeGridCellDef="let row"
         >
-          <span *ngIf="!row.data.expandable">{{ row.data.lastEdited }}</span>
+          <span *ngIf="!row.data.expandable">{{ row.data.lastEdited | date:dateFormat}}</span>
         </td>
       </ng-container>
       <ng-container [nbTreeGridColumnDef]="actionsColumn">
