cleanup sat module #1440

--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -204,6 +204,8 @@
             nbInput
             status="primary"
             placeholder="Type some text"
+            id="text-input"
+            name="text-input"
             [(ngModel)]="userMessage"
             (keyup.enter)="submit()"
           />
