--- a/bot/admin/web/src/app/shared/bot-dialog/display-dialog.component.html
+++ b/bot/admin/web/src/app/shared/bot-dialog/display-dialog.component.html
@@ -20,6 +20,7 @@
   <nb-card-body>
     <ng-container *ngIf="dialog.rating">
       <nb-icon  *ngFor="let _ of [].constructor(dialog.rating)" icon="star-outline"></nb-icon>
+      <p>{{dialog.review}}</p>
     </ng-container>
     <div *ngIf="dialog.actions.length === 0">No dialog</div>
     <div *ngIf="dialog.actions.length !== 0">
