--- a/bot/admin/web/src/app/analytics/satisfaction/satisfaction-details/satisfaction-details.component.css
+++ b/bot/admin/web/src/app/analytics/satisfaction/satisfaction-details/satisfaction-details.component.css
@@ -94,3 +94,16 @@
   padding: 0;
   overflow: visible;
 }
+
+.rating-circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #e6e6e6;
+  font-weight: bold;
+  font-size: 24px;
+  color: #333;
+}
