--- a/nlp/admin/web/src/app/intents/intents.component.html
+++ b/nlp/admin/web/src/app/intents/intents.component.html
@@ -14,291 +14,189 @@
   ~ limitations under the License.
   -->
 
-<nb-card class="intents">
-  <nb-card-header *ngIf="nodes && nodes.length !== 0">
-    The <span class="default_category">default</span> intent category is expanded by default.
-  </nb-card-header>
-  <nb-card-body>
-    <div *ngIf="!nodes || nodes.length === 0">
-      <h4 class="title">No Intent found</h4>
-      <p>To create Intents, start from <em>New Sentence</em> or <em>New Story</em> in Tock Studio, or the <em>API</em>.</p>
-    </div>
-    <table
-      *ngIf="nodes && nodes.length !== 0"
-      [nbTreeGrid]="nodes"
-    >
-      <tr
-        nbTreeGridHeaderRow
-        *nbTreeGridHeaderRowDef="allColumns"
-      ></tr>
-      <tr
-        nbTreeGridRow
-        *nbTreeGridRowDef="let row; columns: allColumns"
-      ></tr>
+<nb-accordion class="no-shadow mt-3 mb-4">
+  <nb-accordion-item
+    *ngFor="let category of intentsCategories; let first = first"
+    [expanded]="isCategoryExpanded(category)"
+    (collapsedChange)="collapsedChange(category)"
+  >
+    <nb-accordion-item-header class="h5 text-capitalize">
+      {{ category.category }}
+    </nb-accordion-item-header>
 
-      <ng-container [nbTreeGridColumnDef]="intentColumn">
-        <th
-          nbTreeGridHeaderCell
-          *nbTreeGridHeaderCellDef
-          class="intent"
+    <nb-accordion-item-body class="accordion-item-body">
+      <div class="compensate-accordion-item-padding">
+        <div class="table-list table-list-header">
+          <div class="table-list-entry">Intent</div>
+          <div class="table-list-entry bordered text-center">Entities</div>
+          <div class="table-list-entry bordered text-center">Shared Intents</div>
+          <div class="table-list-entry bordered text-center">Mandatory States</div>
+          <div class="table-list-entry text-center">Actions</div>
+        </div>
+        <div
+          class="table-list"
+          *ngFor="let intent of category.intents"
         >
-          {{ intentColumn }}
-        </th>
-        <td
-          nbTreeGridCell
-          *nbTreeGridCellDef="let row"
-        >
-          <nb-tree-grid-row-toggle
-            *ngIf="row.data.expandable"
-            [expanded]="row.expanded"
-          ></nb-tree-grid-row-toggle>
-          <span
-            *ngIf="row.data.expandable"
-            class="category"
-            nbTooltip="{{ row.data.category }}"
-            >{{ row.data.category }}</span
-          >
-          <span
-            *ngIf="!row.data.expandable"
-            class="intent_name"
-            nbTooltip="{{ row.data.qualifiedName() }}"
-            >{{ state.isOtherNamespaceIntent(row.data) ? row.data.qualifiedName() : row.data.intentLabel() }}</span
-          >
-          <div
-            *ngIf="state.intentExistsInOtherApplication(row.data.name)"
-            nbTooltip="This intent is shared between at least one other application. All changes to the intent will also affect the other applications that use this intent."
-          >
-            <span class="shared_application_label">Multi-application intent</span>
-            <mat-icon>share</mat-icon>
-          </div>
-        </td>
-      </ng-container>
-      <ng-container [nbTreeGridColumnDef]="descriptionColumn">
-        <th
-          nbTreeGridHeaderCell
-          *nbTreeGridHeaderCellDef
-          class="description"
-        >
-          {{ descriptionColumn }}
-        </th>
-        <td
-          nbTreeGridCell
-          *nbTreeGridCellDef="let row"
-        >
-          <span>{{ row.data.description }}</span>
-        </td>
-      </ng-container>
-      <ng-container [nbTreeGridColumnDef]="entitiesColumn">
-        <th
-          nbTreeGridHeaderCell
-          *nbTreeGridHeaderCellDef
-          class="entities"
-        >
-          {{ entitiesColumn }}
-        </th>
-        <td
-          nbTreeGridCell
-          *nbTreeGridCellDef="let row"
-        >
-          <span *ngFor="let e of row.data.entities">
-            <span class="entity">
-              <mat-icon
-                [style.color]="e.entityColor"
-                class="entity_icon"
-                >extension</mat-icon
-              >
+          <div class="table-list-entry">
+            <div class="font-weight-bold">
+              <span nbTooltip="{{ intent.qualifiedName() }}">
+                {{ state.isOtherNamespaceIntent(intent) ? intent.qualifiedName() : intent.intentLabel() }}
+              </span>
               <span
-                class="status"
-                [style.background-color]="e.entityColor"
-                >{{ e.qualifiedName(state.user) }}</span
+                class="ml-2 valign-middle"
+                *ngIf="state.intentExistsInOtherApplication(intent.name)"
+                nbTooltip="This intent is shared between at least one other application. All changes to the intent will also affect the other applications that use this intent."
               >
+                <nb-icon icon="share-outline"></nb-icon>
+              </span>
+            </div>
+            <span class="text-muted">{{ intent.description }}</span>
+          </div>
+
+          <div class="table-list-entry bordered text-center">
+            <span
+              class="tag"
+              *ngFor="let e of intent.entities"
+              [style.background-color]="e.entityColor"
+              [style.color]="getContrastYIQ(e.entityColor)"
+            >
+              <div
+                class="ellipsis"
+                nbTooltip="{{ e.qualifiedName(state.user) }}"
+              >
+                {{ e.qualifiedName(state.user) }}
+              </div>
               <button
-                *ngIf="!state.intentExistsInOtherApplication(row.data.name) && !state.isOtherNamespaceIntent(row.data)"
+                *ngIf="!state.intentExistsInOtherApplication(intent.name) && !state.isOtherNamespaceIntent(intent)"
                 nbButton
-                size="tiny"
                 ghost
-                status="danger"
-                (click)="removeEntity(row.data, e)"
-                class="removeEntity"
+                size="tiny"
+                shape="round"
+                (click)="removeEntity(intent, e)"
                 nbTooltip="Delete entity"
+                [style.color]="getContrastYIQ(e.entityColor)"
               >
-                <mat-icon>remove_circle_outline</mat-icon>
+                <nb-icon icon="close-outline"></nb-icon>
               </button>
             </span>
-            &nbsp;
-          </span>
-        </td>
-      </ng-container>
-      <ng-container [nbTreeGridColumnDef]="sharedIntentsColumn">
-        <th
-          nbTreeGridHeaderCell
-          *nbTreeGridHeaderCellDef
-          class="shared"
-        >
-          {{ sharedIntentsColumn }}
-        </th>
-        <td
-          nbTreeGridCell
-          *nbTreeGridCellDef="let row"
-          class="shared"
-        >
-          <div *ngIf="!row.data.expandable">
+          </div>
+
+          <div class="table-list-entry bordered text-center">
+            <ng-container *ngIf="!state.isOtherNamespaceIntent(intent)">
+              <span
+                class="tag"
+                *ngFor="let intentId of intent.sharedIntents"
+              >
+                <div
+                  class="ellipsis"
+                  nbTooltip="{{ state.findIntentById(intentId)?.name }}"
+                >
+                  {{ state.findIntentById(intentId)?.name }}
+                </div>
+                <button
+                  *ngIf="!state.intentExistsInOtherApplication(intent.name)"
+                  nbButton
+                  ghost
+                  size="tiny"
+                  shape="round"
+                  (click)="removeSharedIntent(intent, intentId)"
+                  nbTooltip="Remove shared intent"
+                >
+                  <nb-icon icon="close-outline"></nb-icon>
+                </button>
+              </span>
+            </ng-container>
+
             <button
-              *ngIf="!state.isOtherNamespaceIntent(row.data)"
-              [disabled]="selectedIntent === row.data"
+              *ngIf="!state.isOtherNamespaceIntent(intent)"
               nbButton
-              size="small"
               ghost
+              shape="round"
+              size="small"
               nbTooltip="Add shared intent"
-              status="primary"
-              (click)="displayAddSharedIntentDialog(row.data)"
+              (click)="displayAddSharedIntentDialog(intent)"
             >
-              <mat-icon>add_box</mat-icon>
+              <nb-icon icon="plus-circle-outline"></nb-icon>
             </button>
-            <div
-              *ngIf="row.data.sharedIntents.length !== 0"
-              class="shared_list"
-            >
-              <mat-chip-list
-                *ngIf="!state.intentExistsInOtherApplication(row.data.name) && !state.isOtherNamespaceIntent(row.data)"
-                nbTooltip="Shared intent - click to remove"
-              >
-                <mat-chip
-                  *ngFor="let intentId of row.data.sharedIntents"
-                  color="accent"
-                  selected="true"
-                  (click)="removeSharedIntent(row.data, intentId)"
-                >
-                  {{ state.findIntentById(intentId)?.name }}
-                </mat-chip>
-              </mat-chip-list>
-              <mat-chip-list
-                *ngIf="state.intentExistsInOtherApplication(row.data.name) && !state.isOtherNamespaceIntent(row.data)"
-                nbTooltip="Shared intent"
-              >
-                <mat-chip
-                  *ngFor="let intentId of row.data.sharedIntents"
-                  color="accent"
-                  selected="true"
-                >
-                  {{ state.findIntentById(intentId)?.name }}
-                </mat-chip>
-              </mat-chip-list>
-            </div>
           </div>
-        </td>
-      </ng-container>
-      <ng-container [nbTreeGridColumnDef]="mandatoryStatesColumn">
-        <th
-          nbTreeGridHeaderCell
-          *nbTreeGridHeaderCellDef
-          class="states"
-        >
-          {{ mandatoryStatesColumn }}
-        </th>
-        <td
-          nbTreeGridCell
-          *nbTreeGridCellDef="let row"
-          class="states"
-        >
-          <div *ngIf="!row.data.expandable">
+
+          <div class="table-list-entry bordered text-center">
+            <ng-container *ngIf="!state.isOtherNamespaceIntent(intent)">
+              <span
+                class="tag"
+                *ngFor="let s of intent.mandatoryStates"
+              >
+                <div
+                  class="ellipsis"
+                  nbTooltip="{{ s }}"
+                >
+                  {{ s }}
+                </div>
+                <button
+                  *ngIf="!state.intentExistsInOtherApplication(intent.name)"
+                  nbButton
+                  ghost
+                  size="tiny"
+                  shape="round"
+                  (click)="removeState(intent, s)"
+                  nbTooltip="Delete State"
+                >
+                  <nb-icon icon="close-outline"></nb-icon>
+                </button>
+              </span>
+            </ng-container>
+
             <button
-              *ngIf="!state.intentExistsInOtherApplication(row.data.name) && !state.isOtherNamespaceIntent(row.data)"
+              *ngIf="!state.intentExistsInOtherApplication(intent.name) && !state.isOtherNamespaceIntent(intent)"
               nbButton
-              size="small"
               ghost
+              shape="round"
+              size="small"
               nbTooltip="Add state"
-              status="primary"
-              (click)="addState(row.data)"
+              (click)="addState(intent)"
             >
-              <mat-icon>add_box</mat-icon>
+              <nb-icon icon="plus-circle-outline"></nb-icon>
             </button>
+          </div>
+
+          <div class="table-list-entry text-center">
             <div
-              *ngIf="row.data.mandatoryStates.length !== 0"
-              class="shared_list"
+              class="d-flex justify-content-center"
+              *ngIf="!state.isOtherNamespaceIntent(intent)"
             >
-              <mat-chip-list
-                *ngIf="!state.intentExistsInOtherApplication(row.data.name) && !state.isOtherNamespaceIntent(row.data)"
-                nbTooltip="Mandatory states - click to delete"
+              <button
+                nbButton
+                ghost
+                shape="round"
+                nbTooltip="Edit the intent"
+                (click)="updateIntent(intent)"
               >
-                <br />
-                <mat-chip
-                  *ngFor="let s of row.data.mandatoryStates"
-                  color="accent"
-                  selected="true"
-                  (click)="removeState(row.data, s)"
-                >
-                  {{ s }}
-                </mat-chip>
-              </mat-chip-list>
-              <mat-chip-list
-                *ngIf="state.intentExistsInOtherApplication(row.data.name) && !state.isOtherNamespaceIntent(row.data)"
-                matTooltip="Mandatory states"
+                <nb-icon icon="edit-outline"></nb-icon>
+              </button>
+              <button
+                *ngIf="state.hasRole(UserRole.admin)"
+                nbButton
+                ghost
+                shape="round"
+                nbTooltip="Download a sentences dump"
+                (click)="downloadSentencesDump(intent)"
               >
-                <br />
-                <mat-chip
-                  *ngFor="let s of row.data.mandatoryStates"
-                  color="accent"
-                  selected="true"
-                >
-                  {{ s }}
-                </mat-chip>
-              </mat-chip-list>
+                <nb-icon icon="download-outline"></nb-icon>
+              </button>
+              <button
+                nbButton
+                ghost
+                shape="round"
+                status="danger"
+                nbTooltip="Delete the intent"
+                (click)="deleteIntent(intent)"
+              >
+                <nb-icon icon="trash-2-outline"></nb-icon>
+              </button>
             </div>
           </div>
-        </td>
-      </ng-container>
-      <ng-container [nbTreeGridColumnDef]="actionsColumn">
-        <th
-          nbTreeGridHeaderCell
-          *nbTreeGridHeaderCellDef
-          class="actions"
-        >
-          {{ actionsColumn }}
-        </th>
-        <td
-          nbTreeGridCell
-          *nbTreeGridCellDef="let row"
-          class="actions"
-        >
-          <div *ngIf="!row.data.expandable && !state.isOtherNamespaceIntent(row.data)">
-            <button
-              nbButton
-              outline
-              status="primary"
-              size="small"
-              nbTooltip="Edit the intent"
-              (click)="updateIntent(row.data)"
-              class="action"
-            >
-              <nb-icon icon="edit-outline"></nb-icon>
-            </button>
-            <button
-              *ngIf="state.hasRole(UserRole.admin)"
-              nbButton
-              outline
-              status="basic"
-              size="small"
-              nbTooltip="Download a sentences dump"
-              (click)="downloadSentencesDump(row.data)"
-              class="action"
-            >
-              <nb-icon icon="download-outline"></nb-icon>
-            </button>
-            <button
-              nbButton
-              outline
-              status="danger"
-              size="small"
-              nbTooltip="Delete the intent {{ row.data.name }}"
-              (click)="deleteIntent(row.data)"
-              class="action"
-            >
-              <nb-icon icon="trash-2-outline"></nb-icon>
-            </button>
-          </div>
-        </td>
-      </ng-container>
-    </table>
-  </nb-card-body>
-</nb-card>
+        </div>
+      </div>
+    </nb-accordion-item-body>
+  </nb-accordion-item>
+</nb-accordion>
