--- a/bot/admin/web/src/app/analytics/dialogs/dialogs.component.css
+++ b/bot/admin/web/src/app/analytics/dialogs/dialogs.component.css
@@ -19,6 +19,7 @@
 
 .select-plan {
   width: 10rem;
+  margin-right: 20px;
 }
 
 .search-input {
@@ -32,9 +33,8 @@
 
 .dialogs {
   height: 100%;
-  width: 90%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
   text-align: center;
 }
