--- a/bot/admin/web/src/app/analytics/satisfaction/satisfaction-details/satisfaction-details.component.css
+++ b/bot/admin/web/src/app/analytics/satisfaction/satisfaction-details/satisfaction-details.component.css
@@ -29,11 +29,9 @@
 }
 
 .stats {
-  margin: 8px;
-  margin-left: 1px;
-  margin-right: 1px;
-  height: 100px;
-  padding: 12px 24px;
+  padding-right: 24px;
+  padding-left: 24px;
+  margin-bottom: unset;
   flex-grow: 1;
   flex-basis: 0;
   flex-direction: row;
