--- a/bot/admin/web/src/app/analytics/dialogs/dialogs.component.html
+++ b/bot/admin/web/src/app/analytics/dialogs/dialogs.component.html
@@ -92,6 +92,7 @@
               [(ngModel)]="filter.configuration"
               (selectedChange)="refresh()"
             >
+              <nb-option value="">All</nb-option>
               <nb-option
                 *ngFor="let config of configurationNameList"
                 [value]="config"
