--- a/nlp/admin/web/src/app/theme/styles/styles.scss
+++ b/nlp/admin/web/src/app/theme/styles/styles.scss
@@ -23,12 +23,27 @@
 @import '@nebular/theme/styles/globals';
 
 @import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
-@import 'bootstrap/scss/maps';
-@import 'bootstrap/scss/mixins';
-@import 'bootstrap/scss/grid';
 
+$blue: #3366ff;
+$green: #00d68f;
+$cyan: #0095ff;
+$yellow: #ffaa00;
+$red: #ff3d71;
+
+@import 'bootstrap/scss/variables';
+@import 'bootstrap/scss/mixins';
+@import 'bootstrap/scss/root';
+@import 'bootstrap/scss/reboot';
+@import 'bootstrap/scss/type';
+@import 'bootstrap/scss/images';
+@import 'bootstrap/scss/grid';
+@import 'bootstrap/scss/tables';
+@import 'bootstrap/scss/forms';
+@import 'bootstrap/scss/transitions';
 @import 'bootstrap/scss/pagination';
+@import 'bootstrap/scss/close';
+@import 'bootstrap/scss/utilities';
+@import 'bootstrap/scss/print';
 
 @import './layout';
 @import './overrides';
