--- a/bot/admin/web/src/app/bot/story/search-story/search-story.component.scss
+++ b/bot/admin/web/src/app/bot/story/search-story/search-story.component.scss
@@ -13,121 +13,15 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-.intent {
-  width: 820px;
-  overflow-x: auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
+.no-shadow {
+  box-shadow: none;
 }
 
-.intent-mention {
-  font-size: small;
+.compensate-accordion-item-padding {
+  margin-top: -1.5rem;
+  margin-bottom: -1rem;
 }
 
-.sentence-input {
-  width: 80%;
-  font-size: xx-large;
-}
-
-.text-area-container {
-  min-width: 800px;
-}
-
-.text-area {
-  padding: 5px 5px 5px 5px;
-  border: inset;
-}
-
-.field {
-  margin-right: 20px;
-}
-
-.search-input {
-  margin-right: 10px;
-}
-
-.stories {
-  margin-top: 20px;
-}
-
-.download {
-  float: right;
-}
-
-.action {
-  margin-left: 10px;
-}
-
-.nb-column-Actions {
-  width: 160px;
-  padding: 0;
-}
-
-.toggle {
-  position: relative;
-  top: 10px;
-  margin-right:1em;
-}
-
-
-.mat-table {
-  width: 100%;
-}
-
-.mat-row {
-  width: 100%;
-  min-height: 12px;
-}
-
-.div-title {
-  text-align: center;
-  font-size: medium;
-  font-weight: bold;
-  padding: 4px;
-}
-
-.mat-header-cell {
-  min-height: 2rem;
-  color: #222b45;
-  font-family: Open Sans, sans-serif;
-  font-size: 0.9375rem;
-  font-weight: bold;
-  padding: 0.85rem 1.3rem;
-  border: 2px solid #f7f9fc;
-  height: fit-content;
-}
-
-.mat-header-row {
-  width: 100%;
-  min-height: 2rem;
-  border-bottom-width: 0px;
-}
-
-.mat-cell {
-  padding: 0.85rem 1.3rem;
-  border: 2px solid #f7f9fc;
-  color: #222b45;
-  font-family: Open Sans, sans-serif;
-  font-size: 0.9375rem;
-  word-wrap: anywhere;
-  min-height: 2rem;
-  align-self: stretch;
-}
-
-.mat-row {
-  width: 100%;
-  min-height: 2rem;
-  border-bottom-width: 0px;
-}
-
-.mat-cell:last-of-type {
-  padding-left: 0px;
-  max-width: 160px;
-}
-
-.mat-header-cell:last-of-type {
-  padding-left: 0px;
-  max-width: 160px;
+.loading-spinner-wrapper {
+  min-height: 50vh;
 }
